
namespace Midi {
    public class Event {
        public ulong Delta;
    }
}