namespace Midi {
    public enum MetaEventType {
        SequenceNumber,
        MidiChannelPrefix,
        EndOfTrack,
        SetTempo,
        SMPTEOffset,
        TimeSignature,
        KeySignature,
        Misc
    }
}